# ZeroCostGame

./: .gitignore  Cargo.toml  README.md  first_flag.txt  game_setup.sh
challenges/: challenge0.rs  challenge1.rs  challenge10.rs  challenge2.rs  challenge3.rs  challenge4.rs  challenge5.rs  challenge6.rs  challenge7.rs  challenge8.rs  challenge9.rs  lib.rs
challenges/src/: challenge0.rs  challenge1.rs  challenge10.rs  challenge2.rs  challenge3.rs  challenge4.rs  challenge5.rs  challenge7.rs  challenge8.rs  challenge9.rs  lib.rs
challenges_altered/: challenge0.rs  challenge1.rs
challenges_answers/: Cargo.toml
challenges_answers/src/: challenge0.rs  challenge1.rs  challenge10.rs  challenge2.rs  challenge3.rs  challenge4.rs  challenge5.rs  challenge6.rs  challenge7.rs  challenge8.rs  challenge9.rs  lib.rs
game_directory/: oracle
game_directory/challenges/: challenge5.rs  challenge7.rs  challenge9.rs
game_directory/player_advices/: player_advices_en.md  player_advices_fr.md
oracle/: Cargo.toml
oracle/src/: banner.rs  crypto.rs  lib.rs  logic.rs  main.rs  solve0.rs  verifier.rs  wrapper.rs
oracle/src/flags/: encrypted_flag_list.csv  flag0.rs  flag_list.csv  mod.rs
oracle/src/solves/: mod.rs  solve0.rs
oracle/src/verifiers/: mod.rs  v_challenge0.rs  v_challenge1.rs  v_challenge10.rs  v_challenge2.rs  v_challenge3.rs  v_challenge4.rs  v_challenge5.rs  v_challenge6.rs  v_challenge7.rs  v_challenge8.rs  v_challenge9.rs
player_advices/: player_advices_en.md  player_advices_fr.md
